Added models to the project for projecting data from objects.

--- a/franchise/app/templates/app/base.html
+++ b/franchise/app/templates/app/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/static/app/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/app/css/fonts.css">
     <link rel="stylesheet" type="text/css" href="/static/app/css/style.css">
-    <title>Franchise - {% block title %}{% endblock title %}</title>
+    <title>Franchise {% block title %}{% endblock title %}</title>
   </head>
   <body>
     <header>
