--- a/franchise/app/templates/app/testing.html
+++ b/franchise/app/templates/app/testing.html
@@ -1,5 +1,5 @@
 {% extends "app/base.html" %}
-{% block title %}{{ title }}{% endblock title %}
+{% block title %}- {{ title }}{% endblock title %}
 {% block content %}
   <hr class="silent">
   <div class="container text-center">
