--- a/franchise/app/templates/app/base.html
+++ b/franchise/app/templates/app/base.html
@@ -13,13 +13,14 @@
     <header>
       <nav class="navbar navbar-expand-md navbar-dark bg-black fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand ml-5" href="{% url 'testing' %}">Franchise</a>
+          <a class="navbar-brand ml-5" href="{% url 'welcome' %}">Franchise</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav ml-auto">
               <a class="btn nav-item nav-link mr-5" href="{% url 'division-list' %}">Divisions</a>
+              <a class="btn nav-item nav-link mr-5" href="{% url 'team-list' %}">Teams</a>
             </div>
           </div>
         </div>
