--- a/franchise/app/templates/app/division_list.html
+++ b/franchise/app/templates/app/division_list.html
@@ -10,7 +10,9 @@
       <div class="row">
         {% for division in divisions %}
           <div class="col-md-3 pt-3">
-            <a class="btn btn-lg btn-dark w-100 py-3" href="{% url 'division-detail' division.pk %}"><h4>{{ division.name }}</h4></a>
+            <a class="btn btn-lg btn-dark w-100 py-3" href="{% url 'division-teams' division.pk %}">
+              <h4>{{ division.name }}</h4>
+            </a>
           </div>
         {% endfor %}
       </div>
