Added a favicon to the project.

--- a/franchise/app/templates/app/base.html
+++ b/franchise/app/templates/app/base.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="/static/app/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="/static/app/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/app/css/fonts.css">
     <link rel="stylesheet" type="text/css" href="/static/app/css/style.css">
