Adjusted img tag to apply height only sizing for imaging to avoid squishing images natural width.

--- a/franchise/app/templates/app/base.html
+++ b/franchise/app/templates/app/base.html
@@ -22,6 +22,7 @@
             <div class="navbar-nav ml-auto">
               <a class="btn nav-item nav-link mr-5" href="{% url 'division-list' %}">Divisions</a>
               <a class="btn nav-item nav-link mr-5" href="{% url 'team-list' %}">Teams</a>
+              <a class="btn nav-item nav-link mr-5" href="{% url 'player-list' %}">Players</a>
             </div>
           </div>
         </div>
