--- a/franchise/app/templates/app/team_list.html
+++ b/franchise/app/templates/app/team_list.html
@@ -9,7 +9,7 @@
           <div class="row align-items-center">
             <div class="col-md">
               <a href="{% url 'team-detail' team.pk %}">
-                <img width="100" height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
+                <img height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
               </a>
             </div>
             <div class="col-md-7">
