--- a/franchise/app/templates/app/team_detail.html
+++ b/franchise/app/templates/app/team_detail.html
@@ -7,7 +7,7 @@
       <div class="rounded p-3" style="background: #{{ team.color.alt }};color: #{{ team.color.main }}">
         <div class="row align-items-center">
           <div class="col-md">
-            <img width="100" height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
+            <img height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
           </div>
           <div class="col-md-7">
             <h1>{{ team.profile.fullname }}</h1>
