--- a/franchise/app/templates/app/category_list.html
+++ b/franchise/app/templates/app/category_list.html
@@ -1,16 +1,16 @@
 {% extends "app/base.html" %}
-{% block title %} Division List {% endblock title %}
+{% block title %} Category List {% endblock title %}
 {% block content %}
   <div class="container text-center">
     <hr class="silent">
     <div class="bg-white txt-black rounded p-3">
       <div class="bg-black txt-white rounded p-3">
-        <h1 class="text-center">Divisions</h1>
+        <h1>Categories</h1>
       </div>
       <div class="row">
-        {% for division in divisions %}
+        {% for category in categories %}
           <div class="col-3 pt-3">
-            <a class="btn btn-lg btn-dark w-100 py-3" href="{% url 'division-teams' division.pk %}"><h4>{{ division.name }}</h4></a>
+            <a class="btn btn-lg btn-dark w-100 py-3" href="{% url 'category-detail' category.pk %}"><h4>{{ category.name }}</h4></a>
           </div>
         {% endfor %}
       </div>
