--- a/franchise/app/templates/app/division_teams.html
+++ b/franchise/app/templates/app/division_teams.html
@@ -1,35 +1,32 @@
 {% extends "app/base.html" %}
-{% block title %} - Division Teams {% endblock title %}
+{% block title %} Division Teams {% endblock title %}
 {% block content %}
+  <hr class="silent">
   <div class="container text-center">
-    <hr class="silent">
     <div class="bg-white txt-black rounded p-3">
       <div class="bg-black txt-white rounded p-3">
-        <div class="row align-items-center">
-          <div class="col-md">
-            <h1>{{ teams.first.division.name }}</h1>
-          </div>
-        </div>
+        <a class="silent-link txt-white" href="{% url 'division-detail' teams.first.division.pk %}">
+          <h1>{{ teams.first.division.name }}</h1>
+        </a>
       </div>
     </div>
     <hr class="silent">
     {% for team in teams %}
-      <div class="rounded p-3 mb-3" style="background: #{{ team.color.main  }};color: #{{ team.color.alt }}">
-        <div class="rounded p-3" style="background: #{{ team.color.alt  }};color: #{{ team.color.main }}">
+      <div class="bg-white txt-black rounded p-3 mb-3">
+        <div class="bg-black txt-white rounded p-3">
           <div class="row align-items-center">
-            <div class="col-md">
-              <a href="{% url 'team-players' team.pk %}">
-                <img height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
+            <div class="col">
+              <h1><small>#</small> <strong>{{ team.profile.divrank }}</strong></h1>
+            </div>
+            <div class="col">
+              <a class="silent-link txt-white" href="{% url 'team-detail' team.pk %}">
+                <img width="100" height="100" src="{{ team.logo }}">
               </a>
             </div>
-            <div class="col-md-7">
-              <a class="silent-link" style="color: #{{ team.color.main }}" href="{% url 'team-players' team.pk %}">
+            <div class="col-8">
+              <a class="silent-link txt-white" href="{% url 'team-detail' team.pk %}">
                 <h1>{{ team.profile.fullname }}</h1>
               </a>
-            </div>
-            <div class="col-md">
-              <h2>Record</h2>
-              <h4>{{ team.record }}</h4>
             </div>
           </div>
         </div>
