--- a/franchise/app/templates/app/player_playerstats.html
+++ b/franchise/app/templates/app/player_playerstats.html
@@ -1,5 +1,5 @@
 {% extends "app/base.html" %}
-{% block title %} Player List {% endblock title %}
+{% block title %} Player Stat List {% endblock title %}
 {% block content %}
   <hr class="silent">
   <div class="container text-center">
@@ -7,24 +7,26 @@
       <div class="bg-black txt-white p-3">
         <div class="row align-items-center">
           <div class="col">
-            <a href="{% url 'team-detail' player.team.pk %}">
-              <img width="100" height="100" src="{{ player.team.logo }}">
+            <a href="{% url 'team-detail' playerstats.first.player.team.pk %}">
+              <img width="100" height="100" src="{{ playerstats.first.player.team.logo }}">
             </a>
           </div>
           <div class="col">
-            <img height="100" src="{{ player.headshot }}">
+            <a href="{% url 'player-detail' playerstats.first.player.pk %}">
+              <img height="100" src="{{ playerstats.first.player.headshot }}">
+            </a>
           </div>
           <div class="col-6">
-            <h1>{{ player.name }}</h1>
+            <h1>{{ playerstats.first.player.name }}</h1>
           </div>
           <div class="col">
-            <h1>{{ player.position.name }}</h1>
+            <h1>{{ playerstats.first.player.position.name }}</h1>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
-      {% for playerstat in player.playerstat_set.all %}
+      {% for playerstat in playerstats %}
         <div class="col-6">
           <hr class="silent">
           <div class="bg-white txt-black p-3 rounded">
@@ -47,5 +49,6 @@
         </div>
       {% endfor %}
     </div>
+    <hr class="silent">
   </div>
 {% endblock content %}
