--- a/franchise/app/templates/app/team_list.html
+++ b/franchise/app/templates/app/team_list.html
@@ -1,32 +1,33 @@
 {% extends "app/base.html" %}
-{% block title %} - Team List {% endblock title %}
+{% block title %} Team List {% endblock title %}
 {% block content %}
   <div class="container text-center">
     <hr class="silent">
-    <div class="bg-white txt-black rounded p-3">
-      <div class="bg-black txt-white rounded p-3">
-        <h1>Teams</h1>
-      </div>
-    </div>
-    <hr class="silent">
     {% for team in teams %}
-      <div class="rounded p-3 mb-3" style="background: #{{ team.color.main  }};color: #{{ team.color.alt }}">
-        <div class="rounded p-3" style="background: #{{ team.color.alt  }};color: #{{ team.color.main }}">
-          <div class="row align-items-center">
-            <div class="col-md">
-              <a href="{% url 'team-players' team.pk %}">
-                <img height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
+      <div class="bg-white txt-black rounded p-3 mb-3">
+        <div class="bg-black txt-white rounded p-3">
+          <div class="row text-center align-items-center">
+            <div class="col">
+              <a href="{% url 'team-detail' team.pk %}">
+                <img width="100" height="100" src="/static/app/logos/{{ team.profile.abbr }}.png">
               </a>
             </div>
-            <div class="col-md-7">
-              <a class="silent-link" style="color: #{{ team.color.main }}" href="{% url 'team-players' team.pk %}">
+            <div class="col-8">
+              <a class="silent-link txt-white" href="{% url 'team-detail' team.pk %}">
                 <h1>{{ team.profile.fullname }}</h1>
               </a>
             </div>
-            <div class="col-md">
-              <h2>Record</h2>
-              <h4>{{ team.record }}</h4>
-            </div>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="col">
+            <a class="btn btn-lg btn-dark w-100 py-3" href="#">Team Stats</a>
+          </div>
+          <div class="col">
+            <a class="btn btn-lg btn-dark w-100 py-3" href="{% url 'team-players' team.pk %}">Players</a>
+          </div>
+          <div class="col">
+            <a class="btn btn-lg btn-dark w-100 py-3" href="{% url 'team-playerstats' team.pk %}">Player Stats</a>
           </div>
         </div>
       </div>
